# python-sdk

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
examples/: activation_flow.py  proxy_flow.py  rental_flow.py
tests/: test_smoke.py
virtualsms/: __init__.py  client.py  exceptions.py
