[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtualsms"
version = "2.0.0"
description = "Native Python client for the VirtualSMS REST API v1: SMS verification, number rentals, and proxies."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "VirtualSMS", email = "dev@virtualsms.io" }]
keywords = ["sms", "verification", "virtual number", "sim card", "otp", "2fa", "proxy", "rental", "rest api"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Telephony",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: Security",
]
dependencies = ["requests>=2.25.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.urls]
Homepage = "https://virtualsms.io"
Documentation = "https://virtualsms.io/docs"
Source = "https://github.com/virtualsms-io/virtualsms-python-sdk"
"Bug Tracker" = "https://github.com/virtualsms-io/virtualsms-python-sdk/issues"

[tool.setuptools.packages.find]
include = ["virtualsms*"]
