[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtualsms"
version = "2.0.0"
description = "Official Python SDK for the VirtualSMS API: SMS verification, number rentals, and matching-country proxies on real carrier-issued mobile numbers (not VoIP), across 2500+ services in 145+ countries. Includes a typed client, and helpers for polling SMS codes and managing rentals and proxies from one prepaid balance."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "VirtualSMS", email = "dev@virtualsms.io" }]
keywords = ["sms-verification", "otp", "phone-verification", "virtual-number", "sms-api", "account-verification", "ai-agents", "mcp"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Telephony",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.25.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.urls]
Homepage = "https://virtualsms.io"
Documentation = "https://virtualsms.io/docs"
Source = "https://github.com/virtualsms-io/python-sdk"
"Bug Tracker" = "https://github.com/virtualsms-io/python-sdk/issues"

[tool.setuptools.packages.find]
include = ["virtualsms*"]
